--- a/experiment/mcqgen.ipynb
+++ b/experiment/mcqgen.ipynb
@@ -2,10 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain.llms import OpenAI\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "from lanngchain.chains import Sequentialchain\n",
+    "from langchain.callbacks import get_openai_callback\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import traceback\n",
+    "from dotenv import load_dotenv   \n",
+    "import PyPDF2"
+   ]
   }
  ],
  "metadata": {
@@ -15,8 +36,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
