--- a/experiment/mcqgen.ipynb
+++ b/experiment/mcqgen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,274 @@
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.chains import LLMChain\n",
-    "from lanngchain.chains import Sequentialchain\n",
+    "from langchain.chains.sequential import SequentialChain\n",
     "from langchain.callbacks import get_openai_callback\n",
     "import json\n",
     "import pandas as pd\n",
     "import traceback\n",
     "from dotenv import load_dotenv   \n",
     "import PyPDF2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_key = os.getenv('openai_key')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "f:\\ML\\NLP\\MCQ-Generator\\venv\\Lib\\site-packages\\langchain_core-0.1.52-py3.11.egg\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
+   "source": [
+    "llm = ChatOpenAI(openai_api_key = open_key, model_name='gpt-3.5-turbo',temperature =0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = \"\"\"\n",
+    "Text:{text}\n",
+    "You are an expert MCQ maker. Given the above text, it is your job to \\\n",
+    "create a quiz  of {number} multiple choice questions for {subject} students in {tone} tone. \n",
+    "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
+    "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. \\\n",
+    "Ensure to make {number} MCQs\n",
+    "### RESPONSE_JSON\n",
+    "{RESPONSE_JSON}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template = PromptTemplate(\n",
+    "    input_variables=['text','number','subject','tone','RESPONSE_JSON'],\n",
+    "    template=template\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('F:/ML/NLP/MCQ-Generator/Response.json','r') as f:\n",
+    "    RESPONSE_JSON = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': {'no': '1',\n",
+       "  'mcq': 'multiple choice questions',\n",
+       "  'options': {'a': 'choice here',\n",
+       "   'b': 'choice here',\n",
+       "   'c': 'choice here',\n",
+       "   'd': 'choice here'},\n",
+       "  'correct': 'correct answer'},\n",
+       " '2': {'no': '2',\n",
+       "  'mcq': 'multiple choice questions',\n",
+       "  'options': {'a': 'choice here',\n",
+       "   'b': 'choice here',\n",
+       "   'c': 'choice here',\n",
+       "   'd': 'choice here'},\n",
+       "  'correct': 'correct answer'},\n",
+       " '3': {'no': '3',\n",
+       "  'mcq': 'multiple choice questions',\n",
+       "  'options': {'a': 'choice here',\n",
+       "   'b': 'choice here',\n",
+       "   'c': 'choice here',\n",
+       "   'd': 'choice here'},\n",
+       "  'correct': 'correct answer'}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RESPONSE_JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "f:\\ML\\NLP\\MCQ-Generator\\venv\\Lib\\site-packages\\langchain_core-0.1.52-py3.11.egg\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 0.3.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
+   "source": [
+    "quiz_chain = LLMChain(llm =llm, prompt=prompt_template, output_key = 'quiz',verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template2=\"\"\"\n",
+    "You are an expert english grammarian and writer. Given a Multiple Choice Quiz for {subject} students.\\\n",
+    "You need to evaluate the complexity of the question and give a complete analysis of the quiz. Only use at max 50 words for complexity analysis. \n",
+    "if the quiz is not at per with the cognitive and analytical abilities of the students,\\\n",
+    "update the quiz questions which needs to be changed and change the tone such that it perfectly fits the student abilities\n",
+    "Quiz_MCQs:\n",
+    "{quiz}\n",
+    "\n",
+    "Check from an expert English Writer of the above quiz:\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evalution_prompt_template = PromptTemplate(\n",
+    "    input_variables=['subject','quiz'],\n",
+    "    template=template2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review_chain = LLMChain(llm =llm, prompt=evalution_prompt_template, output_key = 'review',verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_evaluate_chain = SequentialChain(chains=[quiz_chain,review_chain],input_variables=['text','number','subject','tone','RESPONSE_JSON'],output_variables=['quiz','review'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# paragraph for MCQ generation\n",
+    "with open('F:/ML/NLP/MCQ-Generator/data.txt') as f:\n",
+    "    text = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Cricket is a bat-and-ball game that is played between two teams of eleven players on a field at the centre of which is a 22-yard (20-metre) pitch with a wicket at each end, each comprising two bails balanced on three stumps. Two players from the batting team (the striker and nonstriker) stand in front of either wicket, with one player from the fielding team (the bowler) bowling the ball towards the striker\\'s wicket from the opposite end of the pitch. The striker\\'s goal is to hit the bowled ball and then switch places with the nonstriker, with the batting team scoring one run for each exchange. Runs are also scored when the ball reaches or crosses the boundary of the field or when the ball is bowled illegally.\\n\\nThe fielding team tries to prevent runs from being scored by dismissing batters (so they are \"out\"). Means of dismissal include being bowled, when the ball hits the striker\\'s wicket and dislodges the bails, and by the fielding side either catching the ball after it is hit by the bat, but before it hits the ground, or hitting a wicket with the ball before a batter can cross the crease in front of the wicket. When ten batters have been dismissed, the innings ends and the teams swap roles. Forms of cricket range from Twenty20 (also known as T20), with each team batting for a single innings of 20 overs (each \"over\" being a set of 6 fair opportunities for the batting team to score) and the game generally lasting three to four hours, to Test matches played over five days.\\n\\nTraditionally cricketers play in all-white kit, but in limited overs cricket they wear club or team colours. In addition to the basic kit, some players wear protective gear to prevent injury caused by the ball, which is a hard, solid spheroid made of compressed leather with a slightly raised sewn seam enclosing a cork core layered with tightly wound string.\\n\\nThe earliest known definite reference to cricket is to it being played in South East England in the mid-16th century. It spread globally with the expansion of the British Empire, with the first international matches in the second half of the 19th century. The game\\'s governing body is the International Cricket Council (ICC), which has over 100 members, twelve of which are full members who play Test matches. The game\\'s rules, the Laws of Cricket, are maintained by Marylebone Cricket Club (MCC) in London. The sport is followed primarily in South Asia, Australia, New Zealand, the United Kingdom, Southern Africa and the West Indies.[1]'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number = 5\n",
+    "subject = 'Sport'\n",
+    "tone = 'Simple'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with get_openai_callback() as cb:\n",
+    "    generate_evaluate_chain(\n",
+    "        'text':text,\n",
+    "        'number':number,\n",
+    "        'subject':subject,\n",
+    "        'tone':tone,\n",
+    "        'RESPONSE_JSON':RESPONSE_JSON\n",
+    "    )"
    ]
   }
  ],
